force-app/main/default/objects/GRR_Lanzamiento__c/GRR_Lanzamiento__c.object-meta.xml
<CustomObject>
    <label>Lanzamiento</label>
    <nameField>
        <displayFormat>LANZ-{00000000}</displayFormat>
        <label>Lanzamiento Number (internal)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lanzamientos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>