force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Codigo_Lanzamiento__c.field-meta.xml
<CustomField>
    <fullName>GRR_Codigo_Lanzamiento__c</fullName>
    <description>Identificador/Clave externo para los diferentes lanzamientos</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Código Lanzamiento</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>