force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Codigo_UR__c.field-meta.xml
<CustomField>
    <fullName>GRR_Codigo_UR__c</fullName>
    <description>Campo de texto para guardar la UR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código UR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>