force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Contrato__c.field-meta.xml
<CustomField>
    <fullName>GRR_Contrato__c</fullName>
    <description>Informa el número de Contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>