force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Despacho_Letrado__c.field-meta.xml
<CustomField>
    <fullName>GRR_Despacho_Letrado__c</fullName>
    <description>Informa datos sobre el despacho del letrado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Despacho Letrado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>