force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Direccion_Territorial__c.field-meta.xml
<CustomField>
    <fullName>GRR_Direccion_Territorial__c</fullName>
    <description>Informa la DT a la que pertenece la vivienda</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>