force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Fecha_Creacion_Tarea__c.field-meta.xml
<CustomField>
    <fullName>GRR_Fecha_Creacion_Tarea__c</fullName>
    <description>Informa la fecha de la creación de la tarea</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Creación Tarea</label>
    <type>DateTime</type>
</CustomField>