force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Finca__c.field-meta.xml
<CustomField>
    <fullName>GRR_Finca__c</fullName>
    <description>Informa datos sobre la finca perteneciente</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Finca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>