force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_HoraPrevistaPosesion__c.field-meta.xml
<CustomField>
    <fullName>GRR_HoraPrevistaPosesion__c</fullName>
    <label>Hora Prevista Posesión</label>
    <type>Time</type>
</CustomField>