force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Importe_Deuda__c.field-meta.xml
<CustomField>
    <fullName>GRR_Importe_Deuda__c</fullName>
    <description>Informa el importe de la deuda de la vivienda (en euros)</description>
    <label>Importe de la deuda</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>