force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Motivo_Finalizacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Motivo_Finalizacion__c</fullName>
    <description>Informa el motivo por el que se finaliza la fecha de lanzamiento prevista</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo finalización</label>
    <length>200</length>
    <type>Text</type>
</CustomField>