force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Nombre_Procurador__c.field-meta.xml
<CustomField>
    <fullName>GRR_Nombre_Procurador__c</fullName>
    <description>Informa el nombre del procurador</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre Procurador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>