force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Origen_Aviso__c.field-meta.xml
<CustomField>
    <fullName>GRR_Origen_Aviso__c</fullName>
    <description>Informa el origen del aviso</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origen Aviso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>