force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Poblacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Poblacion__c</fullName>
    <description>Informa la población de la vivienda afectada</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Población</label>
    <length>100</length>
    <type>Text</type>
</CustomField>