force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Situacion__c.field-meta.xml
<CustomField>
    <fullName>GRR_Situacion__c</fullName>
    <description>Informa el estado/situación del lanzamiento previsto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Situación</label>
    <length>200</length>
    <type>Text</type>
</CustomField>