force-app/main/default/objects/GRR_Lanzamiento__c/fields/GRR_Tipologia__c.field-meta.xml
<CustomField>
    <fullName>GRR_Tipologia__c</fullName>
    <description>Informa el tipo de espacio (vivienda, trastero, local...)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipología</label>
    <length>50</length>
    <type>Text</type>
</CustomField>