force-app/main/default/objects/GRR_Lanzamiento__c/recordTypes/GRR_Lanzamiento.recordType-meta.xml
<RecordType>
    <fullName>GRR_Lanzamiento</fullName>
    <active>true</active>
    <label>Lanzamiento (GRR)</label>
</RecordType>