force-app/main/default/objects/GRR_Lanzamiento__c/listViews/GRR_Todos_los_Lanzamientos.listView-meta.xml
<ListView>
    <fullName>GRR_Todos_los_Lanzamientos</fullName>
    <columns>NAME</columns>
    <columns>GRR_Codigo_UR__c</columns>
    <columns>GRR_Fecha_Prevista_Posesion__c</columns>
    <columns>GRR_Situacion__c</columns>
    <columns>GRR_Direccion__c</columns>
    <columns>GRR_Poblacion__c</columns>
    <columns>GRR_Provincia__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Lanzamientos GRR</label>
    <sharedTo>
        <role>GRR</role>
        <role>GRR_Agente</role>
    </sharedTo>
</ListView>